@@ -1,3 +1,12 @@
+2003-01-21  Jim Meyering  <jim@meyering.net>
+
+	* add.c (add): Rename local-shadowing `i' to `j'.
+
+	* root.c (method_names): Declare to be a const array of const strings.
+	(Name_Root): Save errno so it doesn't get clobbered
+	by the intervening error call.
+	Use getline's return value, mainly to save a call to strrchr.
+
 2003-01-20  Larry Jones  <lawrence.jones@eds.com>
 
 	* myndbm.c (O_ACCMODE): Parenthesize the replacement string so that
@@ -10,7 +19,7 @@
 	allocating it again.  This removes a potential double-free
 	problem, whereby this function could free dir_name and then
 	immediately return due to invalid directory syntax (without ever
-	reassigning dir_name), then reenter and free dir_name again. 
+	reassigning dir_name), then reenter and free dir_name again.
 
         Thanks to Stefan Esser <s.esser@e-matters.de> for the fix.
 
